fix padding issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,6 @@ body {
 
 .intro {
 	background-color: #edfde0;
-	padding: 100px 0px;
 }
 
 .main-content h1 {
@@ -89,7 +88,6 @@ body {
 
 .work {
 	background-color: #F2F3F5;
-	padding: 80px 0px;
 }
 
 li {
